--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,10 +3,10 @@ name: Python Application Tests
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,4 +20,4 @@ jobs:
         with:
           python-version: '3.12'
       - name: Run tests
-        run:  python -m unittest tests/test_app.py
+        run:  python3 -m unittest \tests\test_app.py
